<resources>
    <string name="app_name">Kiwia</string>
    <string name="nothing"> </string>
    <string name="search_devices">Buscar Kiwi</string>
    <string name="not_compatible">No compatible</string>
    <string name="no_support">Este telefono no soporta Bluetooth.</string>
    <string name="fun_limted">Fusncionalidad limitada</string>
    <string name="since_perm_not_granted">Since location access has not been granted, this app will not be able to work correctly.</string>
    <string name="need_loc_access">Esta App nesesita acceso a Location</string>
    <string name="please_grant_loc_access">Please grant location access so this app can detect bluetooth devices.</string>
    <string name="connecting">Conectando..</string>
    <string name="searching">Buscando..</string>
    <string name="found">Kiwis Encontrados</string>
    <string name="make_discoverable">Hazte Visible!</string>
    <string name="not_connected">No conectado</string>
    <string name="bluetooth_not_enabled">Bluetooth no habilitado</string>
    <string name="bluetooth_on">Bluetooth esta habilitado</string>
    <string name="connected_to">Conectado a: </string>
    <string name="paired_devices">Dispositivos Emparejados</string>
    <string name="write_something">Escribe...</string>
    <string name="test_message">Mensaje de Ejemplo ?</string>
    <string name="test_stamp">15 Jun, 2017, 4:25 A.M.</string>
</resources>
