<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_chat"
    app:statusBarBackground="@android:color/background_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/titleTextSize"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/toolbarTitle"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/connectionDot"
                        android:layout_width="19dp"
                        android:layout_height="19dp"
                        android:src="@drawable/ic_circle_red" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </RelativeLayout>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/mainScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBar"
            android:orientation="vertical"
            android:weightSum="5">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4.2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/pairedContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/headerLabelPaired"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/paired_devices"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:visibility="gone" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recyclerViewPaired"
                            android:layout_width="192dp"
                            android:layout_height="wrap_content"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/headerLabelContainer"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/headerLabel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/searching"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/white" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_marginTop="16dp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="190dp"
                        android:layout_height="169dp"
                        android:layout_alignStart="@+id/headerLabelContainer"
                        android:layout_below="@+id/headerLabelContainer"
                        android:textAlignment="center"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                </RelativeLayout>
            </android.support.v4.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:weightSum="2">

                <Button
                    android:id="@+id/search_devices"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/buttonHeight"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_background"
                    android:text="@string/search_devices"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/make_visible"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/buttonHeight"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/select_background"
                    android:text="@string/make_discoverable"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_chat_sent_background"
                    android:text="Jardin de Radios" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>